--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -13,6 +13,19 @@
    "source": [
     "#TODO"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import"
+   ]
   }
  ],
  "metadata": {
